--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,30 @@
-@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&family=Viga&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+1p&family=Bebas+Neue&family=Volkorn&display=swap');
 body {
+    position: relative;
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
-}
-
-body {
-    background-color: #ddd;
-    color: crimson;
+    min-height: 100vh;
+    animation: rolling 5s ease infinite;
+    background-image: linear-gradient( 238deg, #58cfb1, #008091);
+    /* background: linear-gradient(15deg, #44c4d4 0%, rgb(8, 128, 98) 100%); */
+    background-size: 1920px;
+    color: #555;
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: 'M PLUS Rounded 1c';
+    font-family: 'Volkorn';
+    font-weight: 800;
+}
+
+@keyframes rolling {
+    0% {
+        background-position: 0% 100%
+    }
+    50% {
+        background-position: 100% 50%
+    }
+    100% {
+        background-position: 0% 50%
+    }
 }
